Добавлена возможность создания чата с пользователем
