# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\Api\V1\AuthController;
+use App\Http\Controllers\Api\V1\ChatController;
 use App\Http\Controllers\Api\V1\UserController;
 use Illuminate\Support\Facades\Route;
 
@@ -13,6 +14,7 @@ Route::prefix('v1')->group(function () {
     Route::middleware('auth:sanctum')->group(function () {
         //Пользователи
         Route::get('/users', [UserController::class, 'index'])->name('users.index');
+        Route::post('/chats/{userId}', [ChatController::class, 'store'])->whereNumber('userId')->name('chats.store');
     });
 
 });
